--- a/indexx.html
+++ b/indexx.html
@@ -24,7 +24,25 @@
                                     <nav>
                                         <ul class="mein_menu_list mb-10" id="navigation">
                                             <li><a href="" class="active"> Trang chủ </a></li>
-                                            <li><a href="">Sản phẩm</a></li>
+                                            <li>
+                                                <a href="">Sản phẩm</a>
+                                                <ul class="submenu d-block d-lg-none mobile">
+                                                    <li><a href="">Xe-osaka-a8</a></li>
+                                                    <li><a href="">Xe-osaka-a9</a></li>
+                                                    <li><a href="">Xe-osaka-a10</a></li>
+                                                    <li><a href="">Xe-osaka-Nipas</a></li>
+                                                    <li><a href="">Xe-osaka-Xmen</a></li>
+                                                </ul>
+                                                <ul class="submenu d-none d-lg-block destop">
+                                                    <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
+                                                    <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
+                                                    <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
+                                                    <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
+                                                    <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
+                                                    <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
+                                                    
+                                                </ul>
+                                            </li>
                                             <div class="logo-img d-none d-lg-block">
                                                 <a href="">
                                                     <img src="images/logo.jpg" alt="" width="150px;" height="150px;" />
@@ -32,15 +50,21 @@
                                             </div>
                                             <li>
                                                 <a href="#">Giới thiệu</i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="">blog</a></li>
-                                                    <li><a href="">single-blog</a></li>
-                                                </ul>
+                                                
                                             </li>
                                             <li>
                                                 <a href="#">Hỗ trợ </a>
-                                                <ul class="submenu">
-                                                    <li><a href="">elements</a></li>
+                                                <ul class="submenu d-block d-lg-none mobile">
+                                                    <li><a href="">đăng ký làm đại lý</a></li>
+                                                    <li><a href="">chính sách bảo hành</a></li>
+                                                    <li><a href="">chính sách bảo mật</a></li>
+                                                    <li><a href="">tìm cửa hàng</a></li>
+                                                </ul>
+                                                <ul class="submenu d-none d-lg-block destop">
+                                                    <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
+                                                    <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
+                                                    <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
+                                                    <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
                                                 </ul>
                                             </li>
                                             <li><a href="">Sự kiện</a></li>
