--- a/xmenpro.html
+++ b/xmenpro.html
@@ -34,7 +34,7 @@
                                                     <li><a href="">Xe-osaka-Xmen</a></li>
                                                 </ul>
                                                 <ul class="nav nav-tabs submenu mn-pc d-none d-lg-block destop">
-                                                    <li>
+                                                    <li class="active">
                                                         <a data-toggle="tab" href="#home">đăng ký làm đại lý</a>
                                                         <div class="tab-content">
                                                             <div id="home" class="tab-pane in active">
