--- a/indexx.html
+++ b/indexx.html
@@ -45,7 +45,7 @@
                                             </li>
                                             <div class="logo-img d-none d-lg-block">
                                                 <a href="">
-                                                    <img src="images/logo.jpg" alt="" width="150px;" height="150px;" />
+                                                    <img src="images/logo.jpg" alt="" width="100px;" height="100px;" />
                                                 </a>
                                             </div>
                                             <li>
@@ -60,7 +60,7 @@
                                                     <li><a href="">chính sách bảo mật</a></li>
                                                     <li><a href="">tìm cửa hàng</a></li>
                                                 </ul>
-                                                <ul class="submenu d-none d-lg-block destop">
+                                                <usl class="submenu d-none d-lg-block destop">
                                                     <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
                                                     <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
                                                     <li><a href=""><img src="images/osaka1.jpg" alt=""></a></li>
