--- a/xmenpro.html
+++ b/xmenpro.html
@@ -26,7 +26,7 @@
                                             <li><a href="" class="active"> Trang chủ </a></li>
                                             <li>
                                                 <a href="">Sản phẩm</a>
-                                                <ul class="nav nav-tabs submenu mn-pc d-lg-block destop">
+                                                <ul class="nav nav-tabs submenu mn-pc destop">
                                                     <li>
                                                         <div class="mn-c3">
                                                             <ul class="nav nav-tabs">
@@ -37,41 +37,41 @@
                                                           <div class="tab-content">
                                                               <div id="home" class="tab-pane in active">
                                                                 <a href="" title="">
-                                                                    Xe-osaka-a8
+                                                                    <span>Xe-osaka-a8</span>
                                                                     <img src="images/gogo1.jpg" alt="">
                                                                 </a>
                                                                 <a href="" title="">
-                                                                     Xe-osaka-a8
+                                                                    <span>Xe-osaka-a8</span>
                                                                     <img src="images/gogo1.jpg" alt="">
                                                                 </a>
                                                                 <a href="" title="">
-                                                                     Xe-osaka-a8
+                                                                    <span>Xe-osaka-a8</span>
                                                                     <img src="images/gogo1.jpg" alt="">
                                                                 </a>
                                                                 <a href="" title="">
-                                                                     Xe-osaka-a8
+                                                                     <span>Xe-osaka-a8</span>
                                                                     <img src="images/gogo1.jpg" alt="">
                                                                 </a>
                                                                 <a href="" title="">
-                                                                     Xe-osaka-a8
+                                                                     <span>Xe-osaka-a8</span>
                                                                     <img src="images/gogo1.jpg" alt="">
                                                                 </a>
                                                                 <a href="" title="">
-                                                                     Xe-osaka-a8
+                                                                     <span>Xe-osaka-a8</span>
                                                                     <img src="images/gogo1.jpg" alt="">
                                                                 </a>
                                                             </div>
                                                             <div id="menu1" class="tab-pane fade">
                                                                <a href="" title="">
-                                                                Xe-osaka-a8
+                                                                <span>Xe-osaka-a8</span>
+                                                                    <img src="images/gogo1.jpg" alt="">
+                                                                </a>
+                                                               <a href="" title="">
+                                                                <span>Xe-osaka-a8</span>
                                                                 <img src="images/gogo1.jpg" alt="">
                                                             </a>
                                                                <a href="" title="">
-                                                                Xe-osaka-a8
-                                                                <img src="images/gogo1.jpg" alt="">
-                                                            </a>
-                                                               <a href="" title="">
-                                                                Xe-osaka-a8
+                                                                <span>Xe-osaka-a8</span>
                                                                 <img src="images/gogo1.jpg" alt="">
                                                             </a>
                                                             </div>
@@ -91,23 +91,27 @@
                                             </li>
                                             <li>
                                                 <a href="#">Hỗ trợ </a>
-                                                <ul class="submenu d-lg-none d-lg-block menu-pc">
+                                                <ul class="submenu d-lg-block menu-pc">
                                                     <li>
-                                                        <a href="">đăng ký làm đại lý
+                                                        <a href="">
+                                                            <span>đăng ký làm đại lý</span>
                                                             <img src="images/gogo1.jpg" alt="">
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="">chính sách bảo hành
+                                                        <a href="">
+                                                            <span>đăng ký làm đại lý</span>
                                                         <img src="images/gogo1.jpg" alt=""></a>
                                                     </li>
                                                     <li>
-                                                        <a href="">chính sách bảo mật
+                                                        <a href="">
+                                                            <span>đăng ký làm đại lý</span>
                                                             <img src="images/gogo1.jpg" alt="">
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="">tìm cửa hàng
+                                                        <a href="">
+                                                            <span>đăng ký làm đại lý</span>
                                                             <img src="images/gogo1.jpg" alt="">
                                                         </a>
                                                     </li>
