--- a/xmenpro.html
+++ b/xmenpro.html
@@ -93,7 +93,7 @@
                                                 <a href="#">Hỗ trợ </a>
                                                 <ul class="submenu d-lg-block menu-pc">
                                                     <li>
-                                                        <a href="">
+                                                        <a href="" data-toggle="modal" data-target="#exampleModalCenter">
                                                             <span>đăng ký làm đại lý</span>
                                                             <img src="images/gogo1.jpg" alt="">
                                                         </a>
@@ -791,6 +791,75 @@
         </footer>
 
         <!-- footer-end -->
+
+
+        <!-- popup dai ly -->
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <form  class="form-horizontal">
+                        <!-- Text input-->
+                        <div class="form-group">
+                          <label class="col-md-12 control-label" for="name">Họ và tên</label>  
+                          <div class="col-md-12">
+                          <input id="name" name="name" type="text" placeholder="Họ và tên người đăng ký" class="form-control input-md" required="">
+                          </div>
+                        </div>
+                        
+                        <!-- Text input-->
+                        <div class="form-group">
+                          <label class="col-md-12 control-label" for="email">Email</label>  
+                          <div class="col-md-12">
+                          <input id="email" name="email" type="text" placeholder="Email liên hệ" class="form-control input-md" required=""> 
+                          </div>
+                        </div>
+
+                         <!-- Text input-->
+                        <div class="form-group">
+                          <label class="col-md-12 control-label" for="email">Tên công ty</label>  
+                          <div class="col-md-12">
+                          <input id="email" name="email" type="text" placeholder="Tên công ty" class="form-control input-md" required=""> 
+                          </div>
+                        </div>
+                          <!-- Text input-->
+                        <div class="form-group">
+                          <label class="col-md-12 control-label" for="email">Website</label>  
+                          <div class="col-md-12">
+                          <input id="email" name="email" type="text" placeholder="abc.com.vn" class="form-control input-md" required=""> 
+                          </div>
+                        </div>
+                        
+                        <!-- Textarea -->
+                        <div class="form-group">
+                          <label class="col-md-12 control-label" for="message">Lời nhắn</label>
+                          <div class="col-md-12">                     
+                            <textarea class="form-control" id="message" name="message"></textarea>
+                          </div>
+                        </div>
+                        <!-- Button (Double) -->
+                        <div class="form-group">
+                          <label class="col-md-12 control-label" for="submit"></label>
+                          <div class="col-md-12">
+                            <button id="submit" name="submit" type="submit" class="btn btn-success">Đăng ký</button>
+                          </div>
+                        </div>
+
+                    </form>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+        <!-- popup dai ly end -->
 
         <!-- JS here -->
         <script src="js/vendor/fancy-box.js"></script>
